2007-08-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-00
	* db schema change: add field 'processName' to table
	'Configurations'
	* datamodel/gui/db fixes
	* allow for the creation of new directories in
	ConfigurationExportDialog
	

2007-07-31  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-00
	* fixes to the converter:
	  - sequences need to be defined before paths
	  - es_source and es_module require the instance and template
	    names
	  - add 'processName' to data/Configuration and consider it in
	    Converter.getConfigurationHeader() 
	  - THESE CHANGES WERE MADE FOR ASCII ONLY AND SHOULD BE REVIEWED
	    BY ULF!!!
	* add Drag N Drop to the GUI (finally)
	* pick up latest fixes to the parser

2007-07-27  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-02
	* add the ability to import another tree
	* no functionality yet, the imported tree merely shows up on the
	right side of the current configuration tree

2007-07-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-01
	* add 'setup' pull-down to database connection dialog
	* add sql scripts for int2r / odms maintanance
	* increase scroll speed in SrollableMenu
	* parser update/fix from Jonathan

2007-07-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-00
	* change db schema to allow many-to-many relations between
	configurations and edsources, essources, esmodules, services,
	paths, and sequences
	* adjust parser
	* adjust gui

2007-07-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-01
	* allow for empty (db) directories to be removed in the
	SaveConfiguration dialog (context menu)
	* ScrollableMenu: show either both arrows or no arrows

2007-07-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* add ESModuleTemplates and ESModules tables to the db schema
	* add ESModule Template/Instance to the data model